--- a/css/styles.css
+++ b/css/styles.css
@@ -355,6 +355,7 @@ span {
     padding-top: 15px;
     padding-bottom: 15px;
     padding-left: 16px;
+    color: var(--white);
 }
 
 .sign-up-btn {
@@ -927,6 +928,44 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: absolute;
     top: 8px;
     right: 8px;
+}
+
+.modal-form {
+    display: block;
+    width: auto;
+}
+
+.modal-form-item:not(:last-child) {
+    display: block;
+    width: 448px;
+    margin-bottom: 10px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
+
+.modal-send-btn {
+    display: block;
+    width: 200px;
+    height: 50px;
+    background-color: var(--blue);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border: 0;
+    border-radius: 4px;
+}
+
+.modal-send-text {
+    color: var(--white);
+    text-align: center;
+    letter-spacing: 0.06em;
+    font-family: 'Roboto', 'Raleway', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: auto;
+    padding-right: 10px;
 }
 
 .backdrop.is-hidden {
