--- a/css/styles.css
+++ b/css/styles.css
@@ -278,6 +278,9 @@ span {
     margin-right: 70px;
 }
 
+
+/* Соціальні мережі футера */
+
 .connection {
     display: flex;
     margin-bottom: 20px;
@@ -332,6 +335,9 @@ span {
     height: 20px;
     fill: var(--white);
 }
+
+
+/* Форма футера */
 
 .sign-up {
     display: flex;
@@ -884,6 +890,9 @@ span {
     text-decoration: none;
 }
 
+
+/* Бекдроп */
+
 .backdrop {
     position: fixed;
     background-color: rgba(0, 0, 0, 0.2);
@@ -896,6 +905,9 @@ span {
 visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transform: scale(0.5) var(--transition-duration-function);
 }
+
+
+/* Модальне вікно */
 
 .modal {
     position: absolute;
@@ -930,17 +942,33 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     right: 8px;
 }
 
-.modal-form {
-    display: block;
-    width: auto;
+
+/* Форми модального вікна */
+
+.modal-form-caption {
+    position: absolute;
+    font-family: 'Roboto', 'Raleway', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+    margin-bottom: 12px;
 }
 
-.modal-form-item:not(:last-child) {
-    display: block;
-    width: 448px;
-    margin-bottom: 10px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
+.modal-form-input-wrapper {
+    position: relative;
+}
+
+.modal-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-form-field {
+
 }
 
 .modal-send-btn {
