--- a/css/styles.css
+++ b/css/styles.css
@@ -945,22 +945,56 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 /* Форми модального вікна */
 
-.modal-form-caption {
-    position: absolute;
+.modal-form-title {
     font-family: 'Roboto', 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
-    line-height: 23px;
+    line-height: 1.15;
     text-align: center;
     letter-spacing: 0.03em;
-    color: #212121;
+    color: var(--black-for-projects);
+    margin-top: 40px;
     margin-bottom: 12px;
 }
 
 .modal-form-input-wrapper {
     position: relative;
+    font-family: 'Roboto', 'Raleway', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: #757575;
 }
+
+.modal-form-input {
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid #303030;
+    padding-left: 42px;
+}
+
+.modal-form-input:focus {
+    outline: none;
+    border-color: var(--accent-color);
+}
+
+.svg-modal-icon {
+    position: absolute;
+}
+
+/* .modal-form-input-icon {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    display: block;
+    width: 18px;
+    height: 18px;
+    background-color: #188CE8;
+} */
 
 .modal-form {
     display: flex;
@@ -968,17 +1002,129 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-field {
-
+    margin-bottom: 12px;
+    margin-top: auto;
+    margin-left: 40px;
+    margin-right: 40px;
+    padding-bottom: 10px;
+    font-family: 'Roboto', 'Raleway', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: #757575;
+    
 }
 
-.modal-send-btn {
+.modal-form-field-desc {
+    font-family: 'Roboto', 'Raleway', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: #757575;
+    margin-bottom: 8px;
+}
+
+.modal-form-message {
+    width: 100%;
+    height: 120px;
+    border-radius: 5px;
+    border: 1px solid #303030;
+    padding: 15px;
+    resize: none;
+    transition: border-color var(--transition-duration-function);
+}
+
+.modal-form-message:focus {
+    outline: none;
+    border-color: var(--accent-color);
+}
+
+
+/* Чекбокс */
+
+.modal-form-check-field {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    margin-top: auto;
+    margin-left: 40px;
+    margin-right: 40px;
+    padding-bottom: 10px;
+    font-family: 'Roboto', 'Raleway', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: #757575;
+}
+
+.modal-form-own-checkbox {
+    margin-right: 7px;
+    width: 16px;
+    height: 15px;
+    border: 1px solid #303030;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.modal-form-own-checkbox-icon {
+    display: none;
+}
+
+.modal-form-check:checked + .modal-form-own-checkbox {
+    background-color: #2196F3;
+}
+
+.modal-form-check:checked + .modal-form-own-checkbox .modal-form-own-checkbox-icon {
     display: block;
+    fill: #FFFFFF;
+}
+
+.modal-form-check:focus + .modal-form-own-checkbox {
+    border: 1px solid #2196F3;
+    box-shadow: 0 0 0 2px rgba(0, 0, 255, 0.5);
+    border-radius: 4px;
+}
+
+.modal-form-check {
+    appearance: none;
+    position: absolute;
+}
+
+
+/* Кнопка модального вікна */
+
+.modal-send-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    color: var(--white);
+    background-color: var(--blue-for-modal-button);
+    cursor: pointer;
+    padding: 10px 32px;
     width: 200px;
     height: 50px;
     background-color: var(--blue);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border: 0;
     border-radius: 4px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.modal-send-btn:hover,
+.modal-send-btn:focus {
+    background-color: var(--blue-for-modal-button);
 }
 
 .modal-send-text {
