--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,6 @@
     --transition-duration-function: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
-/* для обох сторінок */
 h1, h2, h3, p {
     margin: 0;
     padding: 0;
@@ -66,7 +64,7 @@ ul, ol {
 }
 
 
-/* логотип */
+/* ===ЛОГОТИП=== */
 
 .logo-web-header {
     display: flex;
@@ -117,7 +115,9 @@ span {
 }
 
 
-/* Навігація хедера */
+/* ===ХЕДЕР=== */
+
+/* ===Навігація хедера=== */
 
 .header-styles {
     border-bottom: 1px solid #ececec;
@@ -181,7 +181,7 @@ span {
 }
 
 
-/* Контакти хедера */
+/* ===Контакти хедера=== */
 
 .flex-for-contact-to {
     display: flex;
@@ -235,7 +235,13 @@ span {
 }
 
 
-/* Контакти футера */
+/* ===ФУТЕР=== */
+
+/* ===Контакти футера=== */
+
+.left-side-footer {
+    margin-right: 70px;
+}
 
 .background-footer {
     display: flex;
@@ -274,12 +280,8 @@ span {
     align-items: baseline;
 }
 
-.left-side-footer {
-    margin-right: 70px;
-}
 
-
-/* Соціальні мережі футера */
+/* ===Соціальні мережі футера=== */
 
 .connection {
     display: flex;
@@ -337,10 +339,9 @@ span {
 }
 
 
-/* Форма футера */
+/* ===Форми футера=== */
 
 .sign-up {
-    display: flex;
     margin-bottom: 20px;
     justify-content: flex-start;
     font-weight: 700;
@@ -352,7 +353,19 @@ span {
     color: var(--white);
 }
 
+.footer-form {
+    display: flex;
+    flex-direction: row;
+}
+
+.footer-form-field {
+    display: flex;
+    align-items: center;
+    margin-right: 12px;
+}
+
 .input-styles {
+    font-family: 'Roboto', 'Raleway', sans-serif;
     background-color: transparent;
     width: 358px;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -361,21 +374,29 @@ span {
     padding-top: 15px;
     padding-bottom: 15px;
     padding-left: 16px;
+    outline: none;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
     color: var(--white);
 }
 
 .sign-up-btn {
-    position: absolute;
+    position: relative;
     width: 200px;
     height: 50px;
     background-color: var(--blue);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border: 0;
     border-radius: 4px;
-    margin-left: 12px;
+    padding: 0;
 }
 
 .sign-up-text {
+    position: absolute;
+    display: block;
     color: var(--white);
     text-align: center;
     letter-spacing: 0.06em;
@@ -384,13 +405,15 @@ span {
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: auto;
-    padding-right: 10px;
+    margin: auto;
+    left: 28px;
+    top: 10px;
 }
 
 .sign-up-icon {
+    right: 28px;
+    top: 13px;
+    position: absolute;
     width: 24px;
     height: 24px;
     display: inline;
@@ -398,10 +421,10 @@ span {
     fill: var(--white);
 }
 
-/* ГОЛОВНА */
 
+/* ===ГОЛОВНА=== */
 
-/* Ефективні рішення для вашого бізнесу */
+/* ===Ефективні рішення для вашого бізнесу=== */
 
 .hero {
     text-align: center;
@@ -440,7 +463,7 @@ span {
 }
 
 
-/* Кнопка "Замовити послугу" */
+/* ===Замовити послугу=== */
 
 .modal-button {
     align-items: center;
@@ -464,7 +487,7 @@ span {
 }
 
 
-/* Переваги */
+/* ===Переваги=== */
 
 .benefits-caption {
     display: flex;
@@ -516,7 +539,7 @@ span {
 }
 
 
-/* Чим ми займаємось */
+/* ===Чим ми займаємось=== */
 
 .activites {
     padding-top: 0;
@@ -569,7 +592,7 @@ span {
 }
 
 
-/* Наша команда */
+/* ===Наша команда=== */
 
 .ben-vect {
     display: flex;
@@ -681,7 +704,7 @@ span {
 }
 
 
-/* Постійні клієнти */
+/* ===Постійні клієнти=== */
 
 .regular-customer {
     display: flex;
@@ -748,10 +771,11 @@ span {
 }
 
 
-/* ПОРТФОЛІО */
+
+/* ===ПОРТФОЛІО=== */
 
 
-/* Кнопки */
+/* ===Кнопки=== */
 
 .our-projects {
     justify-content: center;
@@ -809,7 +833,7 @@ span {
 }
 
 
-/* Проекти */
+/* ===Проекти=== */
 
 .overlay-projects {
     position: absolute;
@@ -891,7 +915,7 @@ span {
 }
 
 
-/* Бекдроп */
+/* ===БЕКДРОП=== */
 
 .backdrop {
     position: fixed;
@@ -906,15 +930,21 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transform: scale(0.5) var(--transition-duration-function);
 }
 
+.backdrop.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
 
-/* Модальне вікно */
+
+/* ===МОДАЛЬНЕ ВІКНО=== */
 
 .modal {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #FFFFFF;
+    background-color: var(--white);
     width: 528px;
     height: 581px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -924,6 +954,7 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .modal-close-icon {
     width: 18px;
     height: 18px;
+    fill: var(--black);
 }
 
 .modal-close-button {
@@ -940,6 +971,11 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: absolute;
     top: 8px;
     right: 8px;
+}
+
+.modal-close-button .modal-close-icon:hover,
+.modal-close-button .modal-close-icon:focus {
+    fill: var(--blue);
 }
 
 
@@ -960,13 +996,14 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .modal-form-input-wrapper {
     position: relative;
+    display: block;
     font-family: 'Roboto', 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.01em;
-    color: #757575;
+    color: var(--grey);
 }
 
 .modal-form-input {
@@ -984,17 +1021,18 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .svg-modal-icon {
     position: absolute;
+    display: block;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    width: 13px;
+    height: 13px;
+    fill: #212121;
 }
 
-/* .modal-form-input-icon {
-    position: absolute;
-    top: 50%;
-    left: 12px;
-    display: block;
-    width: 18px;
-    height: 18px;
-    background-color: #188CE8;
-} */
+.modal-form-input:focus + .svg-modal-icon {
+    fill: var(--blue);
+}
 
 .modal-form {
     display: flex;
@@ -1002,30 +1040,41 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-field {
-    margin-bottom: 12px;
-    margin-top: auto;
-    margin-left: 40px;
-    margin-right: 40px;
-    padding-bottom: 10px;
+    display: block;
+    margin-left: 41px;
+    margin-right: 39px;
+    margin-bottom: 10px;
     font-family: 'Roboto', 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.01em;
-    color: #757575;
-    
+    color: var(--grey);
+}
+
+.modal-item {
+    display: block;
+    margin-bottom: 4px;
+    font-family: 'Roboto', 'Raleway', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: var(--grey);
 }
 
 .modal-form-field-desc {
+    display: block;
+    margin-bottom: 4px;
     font-family: 'Roboto', 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.01em;
-    color: #757575;
-    margin-bottom: 8px;
+    color: var(--grey);
 }
 
 .modal-form-message {
@@ -1033,7 +1082,7 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     height: 120px;
     border-radius: 5px;
     border: 1px solid #303030;
-    padding: 15px;
+    padding: 12px 16px;
     resize: none;
     transition: border-color var(--transition-duration-function);
 }
@@ -1049,18 +1098,17 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .modal-form-check-field {
     display: flex;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     margin-top: auto;
-    margin-left: 40px;
-    margin-right: 40px;
-    padding-bottom: 10px;
+    margin-left: 39px;
+    margin-right: 41px;
     font-family: 'Roboto', 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.01em;
-    color: #757575;
+    color: var(--grey);
 }
 
 .modal-form-own-checkbox {
@@ -1100,9 +1148,7 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 /* Кнопка модального вікна */
 
 .modal-send-btn {
-    display: flex;
     align-items: center;
-    justify-content: center;
     text-align: center;
     letter-spacing: 0.06em;
     font-weight: 700;
@@ -1111,18 +1157,14 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: var(--white);
     background-color: var(--blue-for-modal-button);
     cursor: pointer;
-    padding: 10px 32px;
-    width: 200px;
-    height: 50px;
-    background-color: var(--blue);
+    border: 0px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border: 0;
     border-radius: 4px;
+    padding: 10px 52px;
     margin-left: auto;
     margin-right: auto;
 }
 
-.modal-send-btn:hover,
 .modal-send-btn:focus {
     background-color: var(--blue-for-modal-button);
 }
@@ -1138,12 +1180,5 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     line-height: 1.88;
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-left: auto;
-    padding-right: 10px;
-}
-
-.backdrop.is-hidden {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
+    align-self: center;
 }
