--- a/css/styles.css
+++ b/css/styles.css
@@ -976,6 +976,7 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .modal-close-button .modal-close-icon:hover,
 .modal-close-button .modal-close-icon:focus {
     fill: var(--blue);
+    transition: var(--transition-duration-function);
 }
 
 
@@ -1017,6 +1018,7 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .modal-form-input:focus {
     outline: none;
     border-color: var(--accent-color);
+    transition: var(--transition-duration-function);
 }
 
 .svg-modal-icon {
@@ -1032,6 +1034,7 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .modal-form-input:focus + .svg-modal-icon {
     fill: var(--blue);
+    transition: var(--transition-duration-function);
 }
 
 .modal-form {
@@ -1090,6 +1093,7 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .modal-form-message:focus {
     outline: none;
     border-color: var(--accent-color);
+    transition: var(--transition-duration-function);
 }
 
 
@@ -1125,12 +1129,13 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-check:checked + .modal-form-own-checkbox {
-    background-color: #2196F3;
+    background-color: var(--blue);
+    transition: var(--transition-duration-function);
 }
 
 .modal-form-check:checked + .modal-form-own-checkbox .modal-form-own-checkbox-icon {
     display: block;
-    fill: #FFFFFF;
+    fill: var(--white);
 }
 
 .modal-form-check:focus + .modal-form-own-checkbox {
