--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
     --white-for-background-buttons: rgba(245, 244, 250, 1);
     --background-for-section-team: #F5F4FA;
     --black-for-projects: #212121;
+    --black-transparent: rgba(33, 33, 33, 0.2);
     --another-grey: #AFB1B8;
     --transition-duration-function: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -303,7 +304,6 @@ span {
     align-items: baseline;
     column-gap: 10px;
     border-radius: 50%;
-    margin-right: 93px;
 }
 
 .footer-social-list-item {
@@ -340,6 +340,10 @@ span {
 
 
 /* ===Форми футера=== */
+
+.footer-sign-up {
+    margin-left: auto;
+}
 
 .sign-up {
     margin-bottom: 20px;
@@ -941,6 +945,7 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .modal {
     position: absolute;
+    padding: 40px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -952,8 +957,8 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-icon {
-    width: 18px;
-    height: 18px;
+    width: 11px;
+    height: 11px;
     fill: var(--black);
 }
 
@@ -973,8 +978,8 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     right: 8px;
 }
 
-.modal-close-button .modal-close-icon:hover,
-.modal-close-button .modal-close-icon:focus {
+.modal-close-button:hover .modal-close-icon,
+.modal-close-button:focus .modal-close-icon {
     fill: var(--blue);
     transition: var(--transition-duration-function);
 }
@@ -991,7 +996,6 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--black-for-projects);
-    margin-top: 40px;
     margin-bottom: 12px;
 }
 
@@ -1011,7 +1015,7 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 100%;
     height: 40px;
     border-radius: 5px;
-    border: 1px solid #303030;
+    border: 1px solid var(--black-transparent);
     padding-left: 42px;
 }
 
@@ -1044,8 +1048,6 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .modal-form-field {
     display: block;
-    margin-left: 41px;
-    margin-right: 39px;
     margin-bottom: 10px;
     font-family: 'Roboto', 'Raleway', sans-serif;
     font-style: normal;
@@ -1084,7 +1086,7 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 100%;
     height: 120px;
     border-radius: 5px;
-    border: 1px solid #303030;
+    border: 1px solid var(--black-transparent);
     padding: 12px 16px;
     resize: none;
     transition: border-color var(--transition-duration-function);
@@ -1102,17 +1104,26 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .modal-form-check-field {
     display: flex;
     align-items: center;
+    justify-content: center;
     margin-bottom: 30px;
     margin-top: auto;
-    margin-left: 39px;
-    margin-right: 41px;
     font-family: 'Roboto', 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.01em;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
     color: var(--grey);
+}
+
+.conditions-link {
+    font-family: 'Roboto', 'Raleway', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--blue);
 }
 
 .modal-form-own-checkbox {
@@ -1148,6 +1159,7 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     appearance: none;
     position: absolute;
 }
+
 
 
 /* Кнопка модального вікна */
