--- a/css/styles.css
+++ b/css/styles.css
@@ -978,6 +978,8 @@ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     right: 8px;
 }
 
+/* Ховер та фокус на іконці спрацьовують при наведенні на кнопку */
+
 .modal-close-button:hover .modal-close-icon,
 .modal-close-button:focus .modal-close-icon {
     fill: var(--blue);
