--- a/css/styles.css
+++ b/css/styles.css
@@ -131,13 +131,6 @@ span {
     height: 80px;
 }
 
-.flex-for-nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
 .list-nav {
     position: relative;
 }
@@ -148,7 +141,15 @@ span {
     align-items: center;
 }
 
+.flex-for-nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
 .header-nav {
+    position: relative;
     padding-top: 32px;
     padding-bottom: 32px;
     align-items: center;
@@ -165,11 +166,11 @@ span {
     display: block;
     width: 100%;
     height: 4px;
-    margin-top: 28px;
-    margin-bottom: -1px;
+    left: 0;
+    bottom: -1px;
     content: '';
-    border-radius: 4px;
-    background-color: #2196F3;
+    border-radius: 2px;
+    background-color: var(--blue);
 }
 
 .header-nav:focus,
